--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="bootstrap.min.js"></script>
     <link rel="stylesheet" href="bootstrap.min.css">
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="products.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body ng-controller="StoreController as store">
